--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
  <div class="login">
 	<h1 style="text-align:center">Recommendation System</h1>
 
-    <form align="center" action="{{ url_for('predict')}}"method="post">
+    <form align="center" action="{{ url_for('predict')}}"method="POST">
     	<input type="text" style="text-align:center" name="user_name" placeholder="user_name" required="required" />
         <br>
 
